--- a/Alone/langs/en.yaml
+++ b/Alone/langs/en.yaml
@@ -3,7 +3,7 @@ language: "𝐄ɴɢʟɪsʜ "
 
 
 # ɴᴀᴍᴇ ᴏғ ᴘᴇᴏᴘʟᴇ(s) ᴡʜᴏ ᴡᴏʀᴋᴇᴅ ᴏɴ ᴛʜɪs ᴛʀᴀɴsʟᴀᴛɪᴏɴ
-authors: "@ALONE_WAS_BOT"
+authors: "@ROCKY_ISS_BACK"
 
 # ʟᴀɴɢᴜᴀɢᴇs
 curr_chat_lang: "ʜᴇʏ. ʏᴏᴜʀ ᴄᴜʀʀᴇɴᴛ ʟᴀɴɢᴜᴀɢᴇ ɪs {}, sᴇʟᴇᴄᴛ ᴛʜᴇ ᴏɴᴇ ʏᴏᴜ ᴡᴀɴᴛ ғʀᴏᴍ ᴛʜᴇ ʙᴜᴛᴛᴏɴs ʙᴇʟᴏᴡ :)"
@@ -12,7 +12,7 @@ set_chat_lang: "ɢʀᴇᴀᴛ, {} ɪᴛ ɪs ( ғʀᴏᴍ ɴᴏᴡ ᴏɴ!"
 
 
 pm_start_text: |
-   нєу {},🥀 [!](https://telegra.ph/file/4e85c7e0c4be978363163.jpg)
+   нєу {},🥀 [!](https://graph.org/file/a1503f6a173c13523ecc3.jpg)
    
    ๏ ᴛʜɪs ɪs {}
    
