--- a/Alone/langs/hi.yaml
+++ b/Alone/langs/hi.yaml
@@ -3,7 +3,7 @@ language: "𝐇ɪɴᴅɪ "
 
 
 # ɴᴀᴍᴇ ᴏғ ᴘᴇᴏᴘʟᴇ(s) ᴡʜᴏ ᴡᴏʀᴋᴇᴅ ᴏɴ ᴛʜɪs ᴛʀᴀɴsʟᴀᴛɪᴏɴ
-authors: "@ALONE_WAS_BOT"
+authors: "@ROCKY_ISS_BACK"
 
 # ʟᴀɴɢᴜᴀɢᴇs
 curr_chat_lang: "ʜᴇʏ. ʏᴏᴜʀ ᴄᴜʀʀᴇɴᴛ ʟᴀɴɢᴜᴀɢᴇ ɪs {}, sᴇʟᴇᴄᴛ ᴛʜᴇ ᴏɴᴇ ʏᴏᴜ ᴡᴀɴᴛ ғʀᴏᴍ ᴛʜᴇ ʙᴜᴛᴛᴏɴs ʙᴇʟᴏᴡ :)"
@@ -32,8 +32,8 @@ pm_help_text: |
 
 
 add_bot: "➕ ᴀᴅᴅ ᴍᴇ ᴛᴏ ʏᴏᴜʀ ᴄʜᴀᴛ"
-help_menu: "📚 ʜᴇʟᴘ"
-about: "🏡 ᴀʙᴏᴜᴛ"
+help_menu: "⚡ ʜᴇʟᴘ"
+about: "❄️ ᴀʙᴏᴜᴛ"
 owner: "🥀 ᴅᴇᴠᴇʟᴏᴘᴇʀ"
 
 
